README.md: Updated OGC API - DGGS links - Also link to new stand-alone bgen repo - index.html: updated OGC API - DGGS links, mention of IVEA and rust bindings

--- a/dggal.org/index.html
+++ b/dggal.org/index.html
@@ -12,7 +12,7 @@
 <h1>DGGAL, the Discrete Global Grid Abstraction Library</h1>
 
 <h2><em>DGGAL provides a common interface to perform various operations on Discrete Global Grid Reference Systems (DGGRS), facilitating the implementation of Discrete Global Grid Systems (DGGS), including implementing Web APIs based on
-the <a href='https://docs.ogc.org/DRAFTS/21-038.html'>OGC API - DGGS Standard</a>.</em></h2>
+the <a href='https://docs.ogc.org/DRAFTS/21-038r1.html'>OGC API - DGGS Standard</a>.</em></h2>
 <h3>GitHub repository: <a href='https://github.com/ecere/dggal'>ecere/dggal</a></h3>
 
 <h3><a href='https://github.com/ecere/dggal/archive/refs/heads/main.zip'>Latest Source Code</a></h3>
@@ -21,25 +21,27 @@ the <a href='https://docs.ogc.org/DRAFTS/21-038.html'>OGC API - DGGS Standard</a
 
 <h2>Supported Discrete Global Grid Reference Systems</h2>
 
-DGGAL currently supports all three DGGRS described in <a href='https://docs.ogc.org/DRAFTS/21-038.html#annex-dggrs-def'>OGC API - DGGS Annex B</a>:
+DGGAL currently supports all three DGGRS described in <a href='https://docs.ogc.org/DRAFTS/21-038r1.html#annex-dggrs-def'>OGC API - DGGS Annex B</a>, as well as additional DGGRSs:
 <ul>
-<li> <a href='https://docs.ogc.org/DRAFTS/21-038.html#ggg-dggrs'>GNOSIS Global Grid</a>: An axis-aligned quad-tree defined in WGS84 latitude and longitude, with special handling of polar regions, corresponding to the <a href='https://docs.ogc.org/is/17-083r4/17-083r4.html#toc58'>OGC 2D Tile Matrix Set of the same name</a>
-<li> <a href='https://docs.ogc.org/DRAFTS/21-038.html#isea3h-dggrs'>ISEA3H</a>: An equal area hexagonal grid with a refinement ratio of 3 defined in the Icosahedral Snyder Equal Area (ISEA) projection
-<li> <a href='https://docs.ogc.org/DRAFTS/21-038.html#isea9r-dggrs'>ISEA9R</a>: An equal area rhombic grid with a refinement ratio of 9 defined in the ISEA projection transformed into a 5x6 Cartesian space resulting in axis-aligned square zones
+<li> <a href='https://docs.ogc.org/DRAFTS/21-038r1.html#ggg-dggrs'>GNOSIS Global Grid</a>: An axis-aligned quad-tree defined in WGS84 latitude and longitude, with special handling of polar regions, corresponding to the <a href='https://docs.ogc.org/is/17-083r4/17-083r4.html#toc58'>OGC 2D Tile Matrix Set of the same name</a>
+<li> <a href='https://docs.ogc.org/DRAFTS/21-038r1.html#isea3h-dggrs'>ISEA3H</a>: An equal area hexagonal grid with a refinement ratio of 3 defined in the Icosahedral Snyder Equal Area (ISEA) projection
+<li> <a href='https://docs.ogc.org/DRAFTS/21-038r1.html#isea9r-dggrs'>ISEA9R</a>: An equal area rhombic grid with a refinement ratio of 9 defined in the ISEA projection transformed into a 5x6 Cartesian space resulting in axis-aligned square zones
+<li> <b>IVEA3H</b>: An equal area hexagonal grid with a refinement ratio of 3 defined in the Icosahedral Vertex-oriented Great Circle Equal Area (tentatively called IVEA) projection based on <a href='https://www.tandfonline.com/doi/abs/10.1559/152304006779500687'>Slice & Dice (2006)</a>, using the same global indexing and sub-zone ordering as for ISEA3H
+<li> <b>IVEA9R</b>: An equal area rhombic grid with a refinement ratio of 9 defined in the IVEA projection transformed into a 5x6 Cartesian space resulting in axis-aligned square zones, using the same global indexing and sub-zone ordering as for ISEA9R
 </ul>
 
 <h2>libDGGAL <a href='docs/html/dggal/Classes/DGGRS.html'>API documentation</a></h2>
 
 The <code>DGGRS</code> class provides most of the functionality of the library, allowing to resolve DGGRS zones by textual ID to a unique 64-bit zone integer identifier (<code>DGGRSZone</code>).
 The geometry and sub-zones of a particular zone can also be queried.
-The concept of <a href='https://docs.ogc.org/DRAFTS/21-038.html#term-sub-zone'>sub-zones</a> is key to encoding both vector and raster geospatial data quantized to a DGGRS.
+The concept of <a href='https://docs.ogc.org/DRAFTS/21-038r1.html#term-sub-zone'>sub-zones</a> is key to encoding both vector and raster geospatial data quantized to a DGGRS.
 The DGGAL library also allows to resolve a sub-zone index at a particular depth from a parent zone, allowing to read DGGS-optimized data such as
-<a href='http://dggs-json.org'>DGGS-JSON</a> and <a href='https://docs.ogc.org/DRAFTS/21-038.html#rc_data-dggs-jsonfg'>DGGS-JSON-FG</a>.
+<a href='http://dggs-json.org'>DGGS-JSON</a> and <a href='https://docs.ogc.org/DRAFTS/21-038r1.html#rc_data-dggs-jsonfg'>DGGS-JSON-FG</a>.
 <br/><br/>
 A very early draft of the API documentation can be <a href='https://dggal.org/docs/html/dggal/Classes/DGGRS.html'>found here</a>.
 <br/><br/>
 While the library is written in the <a href='https://ec-lang.org'>eC programming language</a>, object-oriented bindings for C, C++ and Python generated using the
-Ecere SDK's <a href='https://github.com/ecere/ecere-sdk/tree/latest/bgen'><code>bgen</code> tool</a> are provided.
+Ecere SDK's <a href='https://github.com/ecere/bgen'><code>bgen</code> tool</a> are provided. Partial bindings for rust are available as well.
 Support for additional languages may be added in the future.
 
 <h3>Pre-built binaries</h3>
@@ -88,6 +90,13 @@ A C++ example implementing the <code>dgg info</code> command using the DGGAL C++
 Python bindings (depending on the C bindings) are <a href='https://github.com/ecere/dggal/tree/main/bindings/py'>available here</a>.<br/><br/>
 
 A Python example using the DGGAL Python bindings is <a href='https://github.com/ecere/dggal/blob/main/bindings_examples/py/info.py'>available here</a>.
+
+<h3>rust Bindings</h3>
+
+rust bindings (depending on the C bindings) are <a href='https://github.com/ecere/dggal/tree/main/bindings/rust'>available here</a>.<br/><br/>
+
+A rust example using the DGGAL rust bindings is <a href='https://github.com/ecere/dggal/blob/main/bindings_examples/rust/info.rs'>available here</a>.
+
 
 <h2><code>dgg</code> tool</h2>
 
@@ -552,7 +561,7 @@ sub-zone B6-5-E not found within parent A4-0-A
 
 <a name='togeo'><h4><code>togeo</code></h4></a>
 
-Converts <a href'http://dggs-json.org'>DGGS-JSON</a> (and eventually <a href='https://docs.ogc.org/DRAFTS/21-038.html#rc_data-dggs-jsonfg'>DGGS-JSON-FG</a> and <a href='https://ubjson.org/'>UBJSON</a> variants) to GeoJSON
+Converts <a href'http://dggs-json.org'>DGGS-JSON</a> (and eventually <a href='https://docs.ogc.org/DRAFTS/21-038r1.html#rc_data-dggs-jsonfg'>DGGS-JSON-FG</a> and <a href='https://ubjson.org/'>UBJSON</a> variants) to GeoJSON
 to facilitate interoperability with traditional GIS software / software not aware of the DGGRS.
 
 <br><br>
