--- a/dggal.org/index.html
+++ b/dggal.org/index.html
@@ -50,6 +50,19 @@ The concept of <a href='https://docs.ogc.org/DRAFTS/21-038r1.html#term-sub-zone'
 The DGGAL library also allows to resolve a sub-zone index at a particular depth from a parent zone, allowing to read DGGS-optimized data such as
 <a href='http://dggs-json.org'>DGGS-JSON</a> and <a href='https://docs.ogc.org/DRAFTS/21-038r1.html#rc_data-dggs-jsonfg'>DGGS-JSON-FG</a>.
 
+<a name='building-dggal'><h2>Building DGGAL</h2></a>
+
+The recommended method to obtain and build DGGAL and the <code>dgg</code> tool is to follow the instructions in <a href='https://github.com/ecere/dggal/blob/eC-core/BUILDING.md'>BUILDING.md</a>,
+or running <a href='https://raw.githubusercontent.com/ecere/dggal/refs/heads/eC-core/fetchAndBuild.sh'>fetchAndBuild.sh<a> /
+<a href='https://raw.githubusercontent.com/ecere/dggal/refs/heads/eC-core/fetchAndBuild.bat'>fetchAndBuild.bat</a>.<br/><br/>
+
+This method will use the <a href='https://github.com/ecere/dggal/tree/eC-core'>eC-core</a> branch meant to be used with
+the <a href='https://github.com/ecere/eC'>stand-alone eC development kit and eC runtime library</a>,
+avoiding unnecessary dependencies on other components of the Ecere SDK runtime library.<br/><br/>
+
+The script will clone both the eC and DGGAL repositories and build everything, including the C, C++, rust and Python bindings
+if the required development tools are properly installed and configured.
+
 <h2>Language bindings</h2>
 
 While the library is written in the <a href='https://ec-lang.org'>eC programming language</a>, object-oriented bindings for C, C++ and Python generated using the
@@ -79,7 +92,6 @@ A Python example using the DGGAL Python bindings is <a href='https://github.com/
 rust bindings (depending on the C bindings) are <a href='https://github.com/ecere/dggal/tree/main/bindings/rust'>available here</a>.<br/><br/>
 
 A rust example using the DGGAL rust bindings is <a href='https://github.com/ecere/dggal/blob/main/bindings_examples/rust/info.rs'>available here</a>.
-
 
 <h2><code>dgg</code> tool</h2>
 
