index.html: add ivea3h and ivea9r

--- a/dggal.org/index.html
+++ b/dggal.org/index.html
@@ -110,6 +110,8 @@ A rust example using the DGGAL rust bindings is <a href='https://github.com/ecer
 <li> <code>gnosis</code> (Global Grid)
 <li> <code>isea3h</code>
 <li> <code>isea9r</code>
+<li> <code>ivea3h</code>
+<li> <code>ivea9r</code>
 </ul>
 
 <h3>Commands</h3>
