README: Rust bindings are no longer partial

--- a/dggal.org/index.html
+++ b/dggal.org/index.html
@@ -60,13 +60,13 @@ This method will use the <a href='https://github.com/ecere/dggal/tree/eC-core'>e
 the <a href='https://github.com/ecere/eC'>stand-alone eC development kit and eC runtime library</a>,
 avoiding unnecessary dependencies on other components of the Ecere SDK runtime library.<br/><br/>
 
-The script will clone both the eC and DGGAL repositories and build everything, including the C, C++, rust and Python bindings
+The script will clone both the eC and DGGAL repositories and build everything, including the C, C++, Rust and Python bindings
 if the required development tools are properly installed and configured.
 
 <h2>Language bindings</h2>
 
 While the library is written in the <a href='https://ec-lang.org'>eC programming language</a>, object-oriented bindings for C, C++ and Python generated using the
-Ecere SDK's <a href='https://github.com/ecere/bgen'><code>bgen</code> tool</a> are provided. Partial bindings for rust are available as well.
+Ecere SDK's <a href='https://github.com/ecere/bgen'><code>bgen</code> tool</a> are provided. Bindings for Rust are available as well.
 Support for additional languages may be added in the future.
 
 <h3>C Bindings</h3>
@@ -87,11 +87,11 @@ Python bindings (depending on the C bindings) are <a href='https://github.com/ec
 
 A Python example using the DGGAL Python bindings is <a href='https://github.com/ecere/dggal/blob/main/bindings_examples/py/info.py'>available here</a>.
 
-<h3>rust Bindings</h3>
+<h3>Rust Bindings</h3>
 
-rust bindings (depending on the C bindings) are <a href='https://github.com/ecere/dggal/tree/main/bindings/rust'>available here</a>.<br/><br/>
+Rust bindings (depending on the C bindings) are <a href='https://github.com/ecere/dggal/tree/main/bindings/rust'>available here</a>.<br/><br/>
 
-A rust example using the DGGAL rust bindings is <a href='https://github.com/ecere/dggal/blob/main/bindings_examples/rust/info.rs'>available here</a>.
+A Rust example using the DGGAL Rust bindings is <a href='https://github.com/ecere/dggal/blob/main/bindings_examples/rust/info.rs'>available here</a>.
 
 <h2><code>dgg</code> tool</h2>
 
