--- a/dggal.org/index.html
+++ b/dggal.org/index.html
@@ -27,16 +27,77 @@ Both a source distribution and built distribution for Linux and Windows, includi
 
 <h2>Supported Discrete Global Grid Reference Systems</h2>
 
-DGGAL currently supports all three DGGRS described in <a href='https://docs.ogc.org/DRAFTS/21-038r1.html#annex-dggrs-def'>OGC API - DGGS Annex B</a>, as well as additional DGGRSs:
+DGGAL currently supports all nine DGGRS described in <a href='https://docs.ogc.org/DRAFTS/21-038r1.html#annex-dggrs-def'>OGC API - DGGS Annex B</a>, as well as additional DGGRSs:
+<h3>Axis-aligned DGGRS in WGS84 latitude and longitude (simple bounding boxes)</h3>
+
 <ul>
-<li> <a href='https://docs.ogc.org/DRAFTS/21-038r1.html#ggg-dggrs'>GNOSIS Global Grid</a>: An axis-aligned quad-tree defined in WGS84 latitude and longitude, with special handling of polar regions, corresponding to the <a href='https://docs.ogc.org/is/17-083r4/17-083r4.html#toc58'>OGC 2D Tile Matrix Set of the same name</a>
-<li> <a href='https://docs.ogc.org/DRAFTS/21-038r1.html#isea3h-dggrs'>ISEA3H</a>: An equal area hexagonal grid with a refinement ratio of 3 defined in the Icosahedral Snyder Equal Area (ISEA) projection
+<li> <a href='https://docs.ogc.org/DRAFTS/21-038r1.html#ggg-dggrs'>GNOSIS Global Grid</a>: An axis-aligned quad-tree defined in WGS84 latitude and
+longitude, with special handling of polar regions achieving an approximate maximum of ~48% variance from median zone area, corresponding to the
+<a href='https://docs.ogc.org/is/17-083r4/17-083r4.html#toc58'>OGC 2D Tile Matrix Set of the same name</a>)
+</ul>
+
+<h3>Equal-Area DGGRSs based on Icosahedral Projections (aperture 3 and 7 Hexagonal, aperture 4 and 9 Axis-Aligned Rhombic)</h3>
+
+All of these Icosahedral DGGRSs achieve equal-area on the WGS84 ellipsoid, and are oriented with a first vertex of the icosahedron positioned at
+authalic latitude of <em>arctan(φ)</em> (where φ is the golden ratio), and longitude 11.20°E, with second vertex due North, resulting in only one
+vertex / pentagon on land. Each of the 12 pentagons occupies 5/6th the area of a hexagon at the same refinement level.
+
+<br/><br/>
+<em>WARNING: The aperture 7 hexagonal grids are still experimental; sub-zones are not yet implemented for them.</em>
+
+<h4>Icosahedral Snyder Equal Area (ISEA) projection</h4>
+
+(<a href='https://doi.org/10.3138%2F27H7-8K88-4882-1752'>An Equal-Area Map Projection for Polyhedral Globes (1992)</a>, or dodecahedron configuration (DVEA)
+of <a href='https://www.tandfonline.com/doi/abs/10.1559/152304006779500687'>Slice & Dice (2006)</a>)
+
+<ul>
+<li> <b>ISEA4R</b>: An equal area rhombic grid with a refinement ratio of 4 defined in the  transformed into a 5x6 Cartesian space resulting in axis-aligned square zones
 <li> <a href='https://docs.ogc.org/DRAFTS/21-038r1.html#isea9r-dggrs'>ISEA9R</a>: An equal area rhombic grid with a refinement ratio of 9 defined in the ISEA projection transformed into a 5x6 Cartesian space resulting in axis-aligned square zones
-<li> <b>IVEA3H</b>: An equal area hexagonal grid with a refinement ratio of 3 defined in the Icosahedral Vertex-oriented Great Circle Equal Area (tentatively called IVEA) projection based on <a href='https://www.tandfonline.com/doi/abs/10.1559/152304006779500687'>Slice & Dice (2006)</a>, using the same global indexing and sub-zone ordering as for ISEA3H
-<li> <b>IVEA9R</b>: An equal area rhombic grid with a refinement ratio of 9 defined in the IVEA projection transformed into a 5x6 Cartesian space resulting in axis-aligned square zones, using the same global indexing and sub-zone ordering as for ISEA9R
-<li> <b>RTEA3H</b>: An equal area hexagonal grid with a refinement ratio of 3 defined in the Rhombic Triacontahedron Equal Area (RTEA) projection, a configuration of the Slice & Dice great circle projection equivalent to applying Snyder's projection to the RT, using the same global indexing and sub-zone ordering as for ISEA3H
+<li> <a href='https://docs.ogc.org/DRAFTS/21-038r1.html#isea3h-dggrs'>ISEA3H</a>: An equal area hexagonal grid with a refinement ratio of 3 defined in the ISEA projection
+<li> <a href='https://docs.ogc.org/DRAFTS/21-038r1.html#isea7h-dggrs'>ISEA7H</a>: An equal area hexagonal grid with a refinement ratio of 7 defined in the ISEA projection
+</ul>
+
+<h4>Icosahedral Vertex-oriented great circle Equal Area (IVEA) projection</h4>
+
+(<a href='https://www.tandfonline.com/doi/abs/10.1559/152304006779500687'>Slice & Dice (2006)</a>, or applying <a href='https://doi.org/10.3138%2F27H7-8K88-4882-1752'>Snyder 1992</a> to the dodecahedron (DSEA))
+
+<ul>
+<li> <b>IVEA4R</b>: An equal area rhombic grid with a refinement ratio of 4 defined in the IVEA projection transformed into a 5x6 Cartesian space resulting in axis-aligned square zones, using the same global indexing and sub-zone ordering as for ISEA4R
+<li> <a href='https://docs.ogc.org/DRAFTS/21-038r1.html#ivea9r-dggrs'>IVEA9R</a>: An equal area rhombic grid with a refinement ratio of 9 defined in the IVEA projection transformed into a 5x6 Cartesian space resulting in axis-aligned square zones, using the same global indexing and sub-zone ordering as for ISEA9R
+<li> <a href='https://docs.ogc.org/DRAFTS/21-038r1.html#ivea3h-dggrs'>IVEA3H</a>: An equal area hexagonal grid with a refinement ratio of 3 defined in the IVEA projection, using the same global indexing and sub-zone ordering as for ISEA3H
+<li> <a href='https://docs.ogc.org/DRAFTS/21-038r1.html#ivea7h-dggrs'>IVEA7H</a>: An equal area hexagonal grid with a refinement ratio of 7 defined in the IVEA projection, using the same global indexing and sub-zone ordering as for ISEA7H
+</ul>
+
+<b>NOTE:</b> This projection is superior to ISEA and RT(S)EA at avoiding perceptible cusps, resulting in more compact/regular zones.
+
+<h4>Rhombic Triacontahedron (Snyder) Equal-Area (RT(S)EA) projection</h4>
+
+(applying <a href='https://doi.org/10.3138%2F27H7-8K88-4882-1752'>Snyder 1992</a> to the Rhombic Triacontahedron,
+ alternate configuration of <a href='https://www.tandfonline.com/doi/abs/10.1559/152304006779500687'>Slice & Dice (2006)</a>,
+<a href='http://hdl.handle.net/1880/114595'>Disdyakis Triacontahedron Discrete Global Grid System</a>, or
+<a href='https://doi.org/10.1080/17538947.2022.2130459'>Construction of rhombic triacontahedron discrete global grid systems</a>)
+
+<ul>
+<li> <b>RTEA4R</b>: An equal area rhombic grid with a refinement ratio of 4 defined in the RTEA projection transformed into a 5x6 Cartesian space resulting in axis-aligned square zones, using the same global indexing and sub-zone ordering as for ISEA4R
 <li> <b>RTEA9R</b>: An equal area rhombic grid with a refinement ratio of 9 defined in the RTEA projection transformed into a 5x6 Cartesian space resulting in axis-aligned square zones, using the same global indexing and sub-zone ordering as for ISEA9R
-<li> <a href='https://iopscience.iop.org/article/10.1088/1755-1315/34/1/012012'>rHEALPix</a>: An equal area and axis-aligned grid with square zones topology and a refinement ratio of 9 defined in the rHEALPix projection (using same parameters as default <a href='https://proj.org/en/stable/operations/projections/rhealpix.html'>PROJ implementation</a>) with the original hierarchical indexing and scanline-based sub-zone ordering
+<li> <b>RTEA3H</b>: An equal area hexagonal grid with a refinement ratio of 3 defined in the RTEA projection using the same global indexing and sub-zone ordering as for ISEA3H
+<li> <b>RTEA7H</b>: An equal area hexagonal grid with a refinement ratio of 7 defined in the RTEA projection using the same global indexing and sub-zone ordering as for ISEA7H
+</ul>
+
+<h3>Axis-aligned and Equal-Area DGGRSs based on HEALPix Projection</h3>
+
+(<a href='https://arxiv.org/pdf/astro-ph/0409513'>HEALPix projection</a>)
+
+<ul>
+<li> <a href='https://docs.ogc.org/DRAFTS/21-038r1.html#HEALPix-dggrs'>HEALPix</a>: An equal area and axis-aligned grid with square zones topology and a
+refinement ratio of 4 defined in the HEALPix projection, using configuration Nφ/H = 4, Nθ/K = 3 (same as default
+<a href='https://proj.org/en/stable/operations/projections/healpix.html'>PROJ implementation</a>), the new indexing described in OGC API - DGGS Annex B,
+and scanline-based sub-zone ordering
+<li> <a href='https://docs.ogc.org/DRAFTS/21-038r1.html#rHEALPix-dggrs'>rHEALPix</a>: An equal area and axis-aligned grid with square zones topology and
+a refinement ratio of 9 defined in the rHEALPix projection using 50° E prime meridian
+(equivalent to <a href='https://proj.org/en/stable/operations/projections/rhealpix.html'>PROJ implementation</a> with parameters
+<code>+proj=rhealpix +lon_0=50 +ellps=WGS84</code>),
+the <a href='https://iopscience.iop.org/article/10.1088/1755-1315/34/1/012012'>original hierarchical indexing</a>, and scanline-based sub-zone ordering
 </ul>
 
 <h2>libDGGAL <a href='docs/html/dggal/Classes/DGGRS.html'>API documentation</a></h2>
@@ -103,13 +164,11 @@ A Rust example using the DGGAL Rust bindings is <a href='https://github.com/ecer
 <h3>Supported DGGRSs</h3>
 <ul>
 <li> <code>gnosis</code> (Global Grid)
-<li> <code>isea3h</code>
-<li> <code>isea9r</code>
-<li> <code>ivea3h</code>
-<li> <code>ivea9r</code>
-<li> <code>rtea3h</code>
-<li> <code>rtea9r</code>
-<li> <code>rhealpix</code> (aperture 9)
+<li> <code>isea4r</code>, <code>isea9r</code>, <code>isea3h</code>, <code>isea7h</code>
+<li> <code>ivea4r</code>, <code>ivea9r</code>, <code>ivea3h</code>, <code>ivea7h</code>
+<li> <code>rtea4r</code>, <code>rtea9r</code>, <code>rtea3h</code>, <code>rtea7h</code>
+<li> <code>rhealpix</code> (aperture 9, 50° E)
+<li> <code>healpix</code> (aperture 4, Nφ/H = 4, Nθ/K = 3)
 </ul>
 
 <h3>Commands</h3>
@@ -200,7 +259,7 @@ Output to file instead of standard output
 <b>-crs</b> &lt;<em>crs</em>&gt;
 </dt><dd>
 Select an output coordinate reference system, one of:
-EPSG:4326, OGC:CRS84, ISEA, 5x6
+EPSG:4326, OGC:CRS84, 5x6, ico (icosahedron net), rhp (rHEALPix), hpx (HEALPix)
 
 </dd><br><dt>
 <b>-depth</b> &lt;<em>relative depth</em>&gt;
@@ -268,37 +327,37 @@ Default ~64K sub-zones relative depth: 10
 &gt; dgg isea3h info A4-0-A
 DGGRS: https://maps.gnosis.earth/ogcapi/dggrs/ISEA3H
 Textual Zone ID: A4-0-A
-64-bit integer ID: 72057594037927936 (0x100000000000000)
+64-bit integer ID: 36028797018963968 (0x80000000000000)
 
 Level 0 zone (5 edges, centroid child)
 42505468477007.4 m² (42505468.4770074 km²)
 49411 sub-zones at depth 10
-WGS84 Centroid (lat, lon): 0, -20.517474411461
-WGS84 Extent (lat, lon): { -35.385453143805, -57.894842551487 }, { 35.3854531438384, 11.2 }
+WGS84 Centroid (lat, lon): 0, -20.517474730219
+WGS84 Extent (lat, lon): { -35.385452137707, -57.8948427221833 }, { 35.385452137707, 11.2 }
 
 No parent
 
 Children (6):
-   A4-0-D (centroid)
-   A4-0-E
-   A4-0-F
-   A3-0-E
-   A2-0-F
-   A2-0-E
+   A4-0-B (centroid)
+   A4-0-C
+   A4-0-D
+   A3-0-C
+   A2-0-D
+   A2-0-C
 
 Neighbors (5):
    (direction 2): A2-0-A
    (direction 3): A6-0-A
-   (direction 0): A0-0-B
+   (direction 0): AA-0-A
    (direction 6): A3-0-A
    (direction 7): A5-0-A
 
 [EPSG:4326] Vertices (5):
-   20.9908533396875, 11.2
-   -20.9908533396875, 11.2
-   -35.385453143805, -33.7999999994894
-   0.0000000010850795, -57.894842551487
-   35.3854531438384, -33.8000000009355
+   20.9908527620464, 11.2
+   -20.9908527620465, 11.2
+   -35.385452137707, -33.8
+   0, -57.8948427221833
+   35.385452137707, -33.8
 </pre>
 
 <a name='zone'><h4><code>zone</code></h4></a>
@@ -309,37 +368,37 @@ Identify zone at a particular geodetic position.
 &gt; dgg isea3h zone 34,-70
 DGGRS: https://maps.gnosis.earth/ogcapi/dggrs/ISEA3H
 Textual Zone ID: A2-0-A
-64-bit integer ID: 36028797018963968 (0x80000000000000)
+64-bit integer ID: 18014398509481984 (0x40000000000000)
 
 Level 0 zone (5 edges, centroid child)
 42505468477007.4 m² (42505468.4770074 km²)
 49411 sub-zones at depth 10
-WGS84 Centroid (lat, lon): 31.832359041336, -78.8
-WGS84 Extent (lat, lon): { 0.00000000095824612, -123.799999999422 }, { 69.1802100999282, -33.8000000009355 }
+WGS84 Centroid (lat, lon): 31.832357532016, -78.8
+WGS84 Extent (lat, lon): { 0, -123.8 }, { 69.1802093248182, -33.8 }
 
 No parent
 
 Children (6):
-   A2-0-D (centroid)
-   A2-0-E
-   A2-0-F
-   A1-0-E
-   A0-0-F
-   A0-0-E
+   A2-0-B (centroid)
+   A2-0-C
+   A2-0-D
+   A1-0-C
+   A0-0-D
+   A0-0-C
 
 Neighbors (5):
    (direction 2): A0-0-A
    (direction 3): A4-0-A
-   (direction 0): A0-0-B
+   (direction 0): AA-0-A
    (direction 6): A1-0-A
    (direction 7): A3-0-A
 
 [EPSG:4326] Vertices (5):
-   35.3854531438384, -33.8000000009355
-   0.0000000010850795, -57.894842551487
-   0.00000000095824612, -99.7051574473385
-   35.3854531459823, -123.799999999422
-   69.1802100999282, -78.8000000030274
+   35.385452137707, -33.8
+   0, -57.8948427221833
+   0, -99.7051575819393
+   35.3854519371908, -123.8
+   69.1802093248182, -78.8
 </pre>
 
 <a name='level'><h4><code>level</code></h4></a>
@@ -408,7 +467,7 @@ Assuming sub-zone depth of 10 (59293 sub-zones) and display resolution of 0.28 m
 Output is <a href='https://geojson.org'>GeoJSON</a>:<br/><br/>
 
 <code>
-&gt; dgg isea3h -crs isea grid 3 > isea3h-level3-isea.geojson
+&gt; dgg isea3h -crs ico grid 3 > isea3h-level3-isea.geojson
 </code>
 
 <br/><br/>
@@ -459,7 +518,7 @@ Generate geometry of a specific zone<br/>
 </pre-->
 
 <pre>
-&gt; dgg -crs isea isea3h geom A4-0-A
+&gt; dgg -crs ico isea3h geom A4-0-A
 </pre>
 
 <center><img src='images/zone-geom.png'/></center>
@@ -473,8 +532,8 @@ Generate geometry of a specific zone<br/>
 </pre>
 
 <pre>
-[ "A0-0-A", "A0-0-B", "A1-0-A", "A2-0-A", "A3-0-A", "A4-0-A", "A5-0-A",
-"A6-0-A", "A7-0-A", "A8-0-A", "A9-0-A", "A9-0-C" ]
+[ "A0-0-A", "A1-0-A", "A2-0-A", "A3-0-A", "A4-0-A", "A5-0-A",
+"A6-0-A", "A7-0-A", "A8-0-A", "A9-0-A", "AA-0-A", "AB-0-A" ]
 </pre>
 
 <h5>List compacted zones of a given refinement level for a particular bounding box</h5>
@@ -499,9 +558,9 @@ Generate geometry of a specific zone<br/>
 Show relationships between two zones
 
 <pre>
-&gt; dgg isea3h rel A4-0-A D4-20-F
+&gt; dgg isea3h rel A4-0-A D4-20-D
 DGGRS: https://maps.gnosis.earth/ogcapi/dggrs/ISEA3H
-Relationships between zones A4-0-A (A) and D4-20-F (B):
+Relationships between zones A4-0-A (A) and D4-20-D (B):
 
 Zone A is coarser than zone B by 7 refinement levels
 The area of zone A is greater than the area of zone B (area of B is 0.054869684499314 % of zone A)
@@ -527,11 +586,11 @@ Zone A and B overlap
 </pre>
 
 <pre>
-[ "B2-7-D", "B2-4-F", "B2-4-E", "B2-5-D", "B2-7-F", "B2-7-E", "B2-8-D",
-"B2-5-F", "B2-5-E", "B3-1-E", "B3-2-D", "B2-8-F", "B2-8-E", "B4-1-D",
-"B4-1-E", "B3-5-D", "B3-2-F", "B3-2-E", "B4-0-D", "B4-0-E", "B4-1-F",
-"B4-5-D", "B3-5-E", "B4-3-D", "B4-0-F", "B4-4-D", "B4-4-E", "B4-3-F",
-"B4-3-E", "B4-4-F", "B4-7-D" ]
+[ "B2-7-B", "B2-4-D", "B2-4-C", "B2-5-B", "B2-7-D", "B2-7-C", "B2-8-B",
+"B2-5-D", "B2-5-C", "B3-1-C", "B3-2-B", "B2-8-D", "B2-8-C", "B4-1-B",
+"B4-1-C", "B3-5-B", "B3-2-D", "B3-2-C", "B4-0-B", "B4-0-C", "B4-1-D",
+"B4-5-B", "B3-5-C", "B4-3-B", "B4-0-D", "B4-4-B", "B4-4-C", "B4-3-D",
+"B4-3-C", "B4-4-D", "B4-7-B" ]
 </pre>
 
 <h5>Identify sub-zone of parent zone at a particular relative depth and index</h5>
@@ -540,7 +599,7 @@ Zone A and B overlap
 &gt; dgg isea3h sub A4-0-A 8 -depth 3
 </pre>
 <pre>
-"B2-5-E"
+"B2-5-C"
 </pre>
 
 <a name='index'><h4><code>index</code></h4></a>
@@ -548,15 +607,15 @@ Zone A and B overlap
 <h5>Query index of sub-zone</h5>
 
 <pre>
-&gt; dgg isea3h index A4-0-A B2-5-E
+&gt; dgg isea3h index A4-0-A B2-5-C
 DGGRS: https://maps.gnosis.earth/ogcapi/dggrs/ISEA3H
-B2-5-E is at index 8 of A4-0-A at depth 3
+B2-5-C is at index 8 of A4-0-A at depth 3
 </pre>
 
 <pre>
-&gt; dgg isea3h index A4-0-A B6-5-E
+&gt; dgg isea3h index A4-0-A B6-5-C
 DGGRS: https://maps.gnosis.earth/ogcapi/dggrs/ISEA3H
-sub-zone B6-5-E not found within parent A4-0-A
+sub-zone B6-5-C not found within parent A4-0-A
 </pre>
 
 <a name='togeo'><h4><code>togeo</code></h4></a>
@@ -565,12 +624,12 @@ Converts <a href'http://dggs-json.org'>DGGS-JSON</a> (and eventually <a href='ht
 to facilitate interoperability with traditional GIS software / software not aware of the DGGRS.
 
 <br><br>
-<a href='https://maps.gnosis.earth/ogcapi/collections/sentinel2-l2a/dggs/ISEA3H/zones/G7-67252-D/data.json?zone-depth=8&datetime=2022-10-28&properties=B08'>
-https://maps.gnosis.earth/ogcapi/collections/sentinel2-l2a/dggs/ISEA3H/zones/G7-67252-D/data.json?zone-depth=8&datetime=2022-10-28&properties=B08
+<a href='https://maps.gnosis.earth/ogcapi/collections/sentinel2-l2a/dggs/ISEA3H/zones/G7-67252-B/data.json?zone-depth=8&datetime=2022-10-28&properties=B08'>
+https://maps.gnosis.earth/ogcapi/collections/sentinel2-l2a/dggs/ISEA3H/zones/G7-67252-B/data.json?zone-depth=8&datetime=2022-10-28&properties=B08
 </a>
 
 <pre>
-&gt; dgg isea3h togeo -isea G7-67252-D-B08.json
+&gt; dgg isea3h togeo -crs ico G7-67252-B-B08.json
 </pre>
 
 <center>
