bindings/c_fn; dggs: Added DGGAL_DGGRS_list(); DGGAL::listDGGRS()

--- a/bindings_examples/js/index.html
+++ b/bindings_examples/js/index.html
@@ -156,24 +156,7 @@
             <div class="form-group">
                 <label for="name">DGGRS Name:</label>
                 <select id="name" name="name">
-                 <option value="GNOSISGlobalGrid">GNOSISGlobalGrid</option>
-                 <option value="ISEA4R">ISEA4R</option>
-                 <option value="ISEA9R">ISEA9R</option>
-                 <option value="ISEA3H">ISEA3H</option>
-                 <option value="ISEA7H">ISEA7H</option>
-                 <option value="ISEA7H_Z7">ISEA7H_Z7</option>
-                 <option value="IVEA4R">IVEA4R</option>
-                 <option value="IVEA9R">IVEA9R</option>
-                 <option value="IVEA3H">IVEA3H</option>
-                 <option value="IVEA7H">IVEA7H</option>
-                 <option value="IVEA7H_Z7" selected>IVEA7H_Z7</option>
-                 <option value="RTEA4R">RTEA4R</option>
-                 <option value="RTEA9R">RTEA9R</option>
-                 <option value="RTEA3H">RTEA3H</option>
-                 <option value="RTEA7H">RTEA7H</option>
-                 <option value="RTEA7H_Z7">RTEA7H_Z7</option>
-                 <option value="HEALPix">HEALPix</option>
-                 <option value="rHEALPix">rHEALPix</option>
+                <!-- Options will be populated dynamically -->
                </select>
             </div>
             <div class="form-group">
